# Smart_Farming_Data_Analysis_Platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ANALIZ.md  CHANGELOG.md  CONTRIBUTORS.md  Dockerfile  LICENSE  Makefile  README.md  demo-canli.sh  docker-compose.yml  docker-entrypoint.sh  hafta1-Emirhan.md  model_evaluation_report.md  projeakisi.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: a11y.yml  ci.yml  security.yml
Ayse_Eslem_Cekici/: UI_UX_Wireframe_Tasarimi.md  weather_processing.py
Ecenur_Uner/: Web_Arayüzü_Veri_Görselleştirme_Entegrasyonu.md  index.html
Emirhan_Gunay/: Hafta_1_Analiz_Raporu.md  SENSOR_INTEGRATION_DOCUMENTATION.md  verify_sensor_data.py
Hafta1/: Geliştirme_Ortamının_Kurulumu
Mehmet_Sait_Taysi/: Temel_Veri_Erişim_API'si_Geliştirme  Veri_Seti_Analizi_ve_Model_Secimi.md  Veri_Seti_İncelemesi_ve_On_İsleme_Adımları.md  requirements.txt
Mirac_Duran/: Gerekli_Teknolojilerin_Arastirilmasi  Gerekli_Teknolojilerin_Arastirilmasi.md
alembic/: env.py
alembic/versions/: 4d1a1503f306_add_sensor_reading_monthly_aggregates_.py  9021458f6b9f_initial_schema_14_tables.py  b1c2d3e4f5a6_rbac_role_check_constraint_and_index.py  c2d3e4f5a6b7_add_missing_fk_indices.py  c5eee337bec4_rbac_role_not_null_drift_fix_audit_orta_.py
app/: __init__.py  config.py  database.py  main.py
app/core/: logger.py  sentry.py
app/middleware/: auth.py  exceptions.py  prometheus.py  rate_limiter.py  rbac.py  request_logger.py  security_headers.py
app/ml/: eval.py  irrigation_model.py  plant_disease_model.py
app/ml/models/: irrigation_model.pkl  scaler.pkl
app/models/: models.py
app/routers/: alerts.py  analytics.py  auth.py  dashboard.py  farms.py  fertilizer.py  fields.py  health.py  irrigation.py  metrics.py  model_performance.py  onboarding.py  plants.py  sensors.py  users.py  weather.py
app/schemas/: alerts.py  base.py  dashboard.py  farms.py  fertilizer.py  field_detail.py  health.py  irrigation.py  model_performance.py  schemas.py  sensors.py  weather.py
app/services/: data_quality.py  fertilizer_service.py  mqtt_listener.py  report_service.py  sensor_archiver.py  weather_service.py
app/tasks/: scheduler.py
database/: seed_data.py  sfdap_schema.sql  turkey_data.py
docs/: CYCLE_8_RETROSPECTIVE.md  FINAL_REPORT.md  QUALITY_AUDIT.md  REBUILD_ROADMAP.md  architecture.md  cnn_model_status_report.md  demo_script.md  model_evaluation_report.md
docs/api/: API_Kullanim_Kilavuzu.md  Temel_Veri_Erişim_API'si_Geliştirme.md
docs/database/: SENSOR_INTEGRATION_DOCUMENTATION.md  Veritabani_Semasi_Tasarimi.md  sensor_readme.md
docs/frontend/: Frontend_Kılavuzu.md
docs/ml/: Makine_Ogrenimi_Rehberi.md
docs/planning/: Veri_Hatti_İzleme.md  Veri_Kaynagi_ve_Toplama_Planı.md  Web_Arayüzü_Veri_Görselleştirme_Entegrasyonu.md
docs/requirements/: Gereksinim_Toplama_ve_Belgeleme.md
docs/research/: Gerekli_Teknolojilerin_Arastirilmasi.md  Hafta_1_Analiz_Raporu.md  Veri_Seti_Analizi_ve_Model_Secimi.md  Veri_Seti_İncelemesi_ve_On_İsleme_Adımları.md
docs/setup/: Gelistirme_Ortaminin_Kurulumu.md  PROD_DEPLOY.md
docs/testing/: Hafta_6_Test_Validasyon_ve_Hata_Ayiklama_Raporu.md  Hafta_6_legacy_test_main.py  Hata_Ayiklama_ve_Dogrulama_Loglari.md  Test_Stratejisi.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
frontend/src/: main.js  theme-init.js
frontend/src/lib/: alerts.js  analytics.js  api.js  auth.js  charts.js  dashboard.js  events.js  fertilizer.js  fields.js  filiz.js  irrigation.js  labels.js  map.js  nav.js  plants.js  render.js  router.js  sensors.js  session.js  skeleton.js  ui_helpers.js  users.js  utils.js  weather.js
frontend/src/lib/pages/: account.js  alerts.js  dashboard.js  fields.js  monitoring.js
frontend/src/styles/: base.css  components.css  filiz.css  layout.css  main.css  pages.css  theme-light.css  theme-toggle.css  variables.css  welcome.css
frontend/tests/: account_rolevis.test.js  charts_retheme.test.js  map.test.js  router_nav.test.js  skeleton.test.js  ui_helpers.test.js
nginx/conf.d/: default.conf.template
scripts/: api_prototype.py  backup.sh  mqtt_publisher.py  restore.sh  seed_demo_readings.py  sensor_integration.py  veri_hatti_izleme.py  verify_sensor_data.py  weather_processing.py
tests/: conftest.py  test_alerts.py  test_analytics.py  test_analytics_export.py  test_auth.py  test_auth_backend.py  test_config.py  test_dashboard.py  test_data_quality.py  test_database_pool.py  test_edge_cases.py  test_exceptions.py  test_farms.py  test_fertilizer.py  test_fields.py  test_frontend_a11y.py  test_health.py  test_integration.py  test_irrigation.py  test_irrigation_model.py  test_jti_blacklist.py  test_metrics.py  test_ml_eval.py  test_model_performance.py  test_mqtt_listener.py  test_observability.py  test_onboarding.py  test_plant_disease_model.py  test_plants.py  test_rbac_fixtures.py  test_scheduler.py  test_schemathesis_fuzz.py  test_security.py  test_security_headers.py  test_sensor_archiver.py  test_sensors.py  test_users_admin.py  test_weather.py  test_weather_service.py
